--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/ImPureD/rip/zipball/master">Download ZIP</a></li>
           <li class="download"><a class="buttons" href="https://github.com/ImPureD/rip/tarball/master">Download TAR</a></li>
+          <li class="header name" href=""> Documantation</li>
           <li><a class="buttons github" href="https://github.com/ImPureD/rip">View On GitHub</a></li>
         </ul>
 
