--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rip by ImPureD</title>
+    <title>Rip by LightHouseSoftware</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -17,16 +17,16 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Rip</h1>
-        <p class="header">Rastr and Image Processor</p>
+        <p class="header">Raster and Image Processor</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/ImPureD/rip/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/ImPureD/rip/tarball/master">Download TAR</a></li>
-          <li class="buttons docs" href=""> Documentation</li>
-          <li><a class="buttons github" href="https://github.com/ImPureD/rip">View On GitHub</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/LightHouseSoftware/rip/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/LightHouseSoftware/rip/tarball/master">Download TAR</a></li>
+          <li><a class="buttons docs" href="docs/rip.concepts.html">View On GitHub</a></li>
+          <li><a class="buttons github" href="https://github.com/LightHouseSoftware/rip">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/ImPureD">ImPureD</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/LightHouseSoftware">LightHouseSoftware</a></p>
 
 
       </header>
@@ -42,13 +42,111 @@
 <p>GPLv3</p>
 
 <h2>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
+
+<ul>
+<li>I/O
+
+<ul>
+<li>JPEG(based on dlib, only loading)</li>
+<li>TGA(based on dlib, only loading)</li>
+<li>BMP(based on dlib, only loading)</li>
+<li>PNG(based on dlib, loading/saving)</li>
+<li>simple and convenient intermediate format (PPM P6)</li>
+<li>PPM(loading/saving)</li>
+<li>PAM(loading savind)</li>
+</ul>
+</li>
+<li>processing
+
+<ul>
+<li> grayscale</li>
+<li> negative</li>
+<li> operations with bit set</li>
+<li> colorization</li>
+<li> rough of pixels</li>
+<li> order filters(4 filters)</li>
+<li> linear filters(11 filters)</li>
+<li> convolution</li>
+</ul>
+</li>
+<li> analysis
+
+<ul>
+<li> operations with histogram</li>
+</ul>
+</li>
+<li> concepts
+
+<ul>
+<li> surface (generalized image type)</li>
+<li> surfaces addition, subtraction, multiplication and other arithmetic operations</li>
+<li> logical operation with surfaces</li>
+<li> gamma correction and inverting of image</li>
+<li> color</li>
+<li> color arithmetic</li>
+<li> generation RGBColor from others color formats</li>
+<li> useful math functions</li>
+<li> ranges</li>
+<li> templates</li>
+<li> channels for working with pixels on channel level</li>
+</ul>
+</li>
+<li> draw
+
+<ul>
+<li> IFS systems</li>
+<li> L-systems</li>
+<li> drawing math funcs</li>
+<li> drawing primitives</li>
+<li> turtle</li>
+<li> another interest graphical procedures</li>
+</ul>
+</li>
+<li>  transforms(rip.dsp)
+
+<ul>
+<li> Haar's</li>
+<li> Hadamard's</li>
+<li> Slant's</li>
+</ul>
+</li>
+</ul>
+
+<p>The most funcs has their analogs for working with ranges.</p>
+
+<h2>
+<a id="in-plans" class="anchor" href="#in-plans" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>In plans</h2>
+
+<ul>
+<li> add more operations for histograms</li>
+<li> add more drawing funcs</li>
+<li> add more formats into IO package</li>
+<li> add 'vision' package for digital vision</li>
+<li> clean code</li>
+<li> optimize code</li>
+</ul>
+
+<p>If you have advices, please, create Issue. You can help us!</p>
+
+<h2>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h2>
+
+<p>ImPureD Team, LightHouse Software</p>
+
+<ul>
+<li> Oleg Baharev (aka aquaratixc)</li>
+<li> Roman Vlasov</li>
+</ul>
+
+<h2>
 <a id="how-to-use-rip" class="anchor" href="#how-to-use-rip" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use RIP?</h2>
 
 <p>Package in your <code>dub.json</code>:</p>
 
 <div class="highlight highlight-source-d"><pre>   {
       <span class="pl-s"><span class="pl-pds">"</span>dependencies<span class="pl-pds">"</span></span>: {
-        <span class="pl-s"><span class="pl-pds">"</span>rip<span class="pl-pds">"</span></span>: <span class="pl-s"><span class="pl-pds">"</span>~&gt;0.0.1<span class="pl-pds">"</span></span>
+        <span class="pl-s"><span class="pl-pds">"</span>rip<span class="pl-pds">"</span></span>: <span class="pl-s"><span class="pl-pds">"</span>~&gt;0.0.2<span class="pl-pds">"</span></span>
       }
    }</pre></div>
 
@@ -63,6 +161,6 @@ WARNING: image can be saved ONLY in ppm/pam/png formats.</p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
   </body>
 </html>
