--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/LightHouseSoftware/rip/zipball/master">Download ZIP</a></li>
           <li class="download"><a class="buttons" href="https://github.com/LightHouseSoftware/rip/tarball/master">Download TAR</a></li>
-          <li><a class="buttons docs" href="docs/rip.concepts.html">Documentation</a></li>
+          <li><a class="buttons docs" href="docs/rip.concepts.package.html">Documentation</a></li>
           <li><a class="buttons github" href="https://github.com/LightHouseSoftware/rip">View On GitHub</a></li>
         </ul>
 
